Fix navbar positioning on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -114,7 +114,7 @@ nav.navbar.withsidebar {
 }
 @media screen and (min-width: 768px) {
   .navbar-nav {
-    margin-top: +7px;
+    margin-top: -10px;
   }
 }
 div.header{
